--- a/styles/main.css
+++ b/styles/main.css
@@ -4,8 +4,8 @@
 
     --max-width: 1140px;
 
-    --header-h: 96px;
-    --footer-h: 96px;
+    --header-height: 96px;
+    --footer-height: 96px;
 
     --content-height: calc(100vh - 192px): 
 }
@@ -17,6 +17,18 @@
     box-sizing: border-box;
 }
 
+header {
+    height: var(--header-height);
+
+    color: var(--main-clr);
+    background: var(--bkg-clr);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
 main {
     width: 100vw;
 
@@ -24,10 +36,21 @@ main {
     
 }
 
+footer {
+    height: var(--footer-height);
+    
+    color: var(--main-clr);
+    background: var(--bkg-clr);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
 .main-container {
     width: 100%;
-    max-height: var(--content-height);
+    height: var(--content-height);
 
     display: flex;
     flex-direction: column;
@@ -44,7 +67,7 @@ main {
 
     width: 100%;
     height: 320px;
-
+    
     display: flex;
 /*  align-items: center; */
     justify-content: space-evenly;
@@ -66,6 +89,16 @@ main {
 
 #controls > button {
     padding: .5rem .75rem;
+}
+
+#display {
+    /* width: 100%; */
+    height: calc(100vh - 512px);
+
+    display: flex;
+    
+    align-items: center;
+    justify-content: center;
 }
 
 .neon-display {
